--- a/lp-store-ui/index.html
+++ b/lp-store-ui/index.html
@@ -45,7 +45,7 @@
       <div class="jumbotron">
         <div class="container">
           <h1 class="display-3">Welcome to our store</h1>
-          <p>Browse our collection of License Plates below</p>
+          <p>Browse our collection of License Plates below!!!!</p>
         </div>
       </div>
 
