--- a/lp-store-ui/index.html
+++ b/lp-store-ui/index.html
@@ -66,8 +66,12 @@
 
     </main>
 
+
     <footer class="container">
       <p>&copy; License Plate Store 2017</p>
+      <a href="https://heroku.com/deploy?template=https://github.com/sillysaint/lp-store-server">
+        <img src="https://www.herokucdn.com/deploy/button.svg" alt="Deploy">
+    </a>
     </footer>
   </body>
 </html>
